Minor changes in the Package

--- a/projects/fusion-grid-test/src/app/app.component.html
+++ b/projects/fusion-grid-test/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ng-container>
-    <fusion-grid [dataTable]="dataTable" [gridConfig]="gridConfig" (initialized)="initialized($event)"></fusion-grid>
+    <fusion-grid style="width: 1000px;height: 1000px;" [dataTable]="dataTable" [gridConfig]="gridConfig" (initialized)="initialized($event)"></fusion-grid>
     <button (click)="updateColumns()">Update Columns</button>
     <button (click)="updateRowOption()">Update RowOption</button>
     <button (click)="updatePagination()">set pagination</button>
